<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".LogicActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"
        android:textSize="16dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:paddingTop="16dp"
        android:hint="@string/user_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/or"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:text="@string/or_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/accountButton"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>