<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:text="@string/journal"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="194dp"
            android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    >

                        <TextView
                            android:id="@+id/grateful_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/greateful_text"
                            android:textSize="19sp" />

                </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/get_started"
            android:textColor="@color/colorAccent" />

</LinearLayout>