<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="402dp"
        android:layout_height="217dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/image_three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/postUserName_textView"
        android:layout_width="112dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/gina"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/post_date"
        android:layout_width="116dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Today"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postUserName_textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/postCameraButton"
        android:layout_width="81dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.486"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title"
        android:layout_width="383dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/post_title"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/post_description"
        android:layout_width="385dp"
        android:layout_height="52dp"
        android:background="@drawable/inputoutline"
        android:ems="10"
        android:hint="@string/thoughts"
        android:inputType="textMultiLine"
        android:paddingLeft="10sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title"
        app:layout_constraintVertical_bias="0.1" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="373dp"
        android:layout_height="64dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="Save"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_progressBar"
        app:layout_constraintVertical_bias="0.685" />

</androidx.constraintlayout.widget.ConstraintLayout>